@@ -1,3 +1,10 @@
+2020-07-29  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* spc_pdfm.c: Improve codes in unicode conversion and
+	annotation rect calculation.
+	* spc_xtx.c: Add missing reset_xgstate().
+	* tt_cmap.c: Add wmode to auto-generated CMap names.
+
 2020-07-28  Clerk Ma  <maqiyuan130324@vip.qq.com>
 
 	* pdfobj.c: Simple modifications for LIBDPX.
